--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -7,7 +7,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<AnalysisLevel>latest-all</AnalysisLevel>
 		<EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
-		<NoWarn>CA1819;CA1034;CA2201;CA1008;CA1054;CA1055;CA1056</NoWarn>
+		<NoWarn>CA1819;CA1034;CA2201;CA1008;CA1054;CA1055;CA1056;CA2227;CA2234</NoWarn>
 	</PropertyGroup>
 
 	<ItemGroup>
