--- a/src/Estral.Host.Web/Estral.Host.Web.csproj
+++ b/src/Estral.Host.Web/Estral.Host.Web.csproj
@@ -19,5 +19,9 @@
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
   </ItemGroup>
+	
+  <ItemGroup>
+    <Folder Include="Features\Pages\Admin\" />
+  </ItemGroup>
 
 </Project>
