Update & fix settings page

--- a/src/Estral.Host.Web/appsettings.json
+++ b/src/Estral.Host.Web/appsettings.json
@@ -1,7 +1,7 @@
 {
 	"Logging": {
 		"LogLevel": {
-			"Default": "Warning",
+			"Default": "Information",
 			"Microsoft.AspNetCore": "Warning",
 			"Estral.Host.Web.Infra.AuditLogService": "Information"
 		}
