--- a/src/Estral.Host.Web/Estral.Host.Web.csproj
+++ b/src/Estral.Host.Web/Estral.Host.Web.csproj
@@ -7,6 +7,10 @@
 		-->
 		<NoWarn>$(NoWarn);CA2007;CA1062</NoWarn>
 	</PropertyGroup>
+
+	<ItemGroup>
+	  <_ContentIncludedByDefault Remove="appsettings.secret.example.json" />
+	</ItemGroup>
 	
   <ItemGroup>
     <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.301" />
